# video-editor

./: .gitignore  CMakeLists.txt
lib/FFmpeg/: CMakeLists.txt
src/: main.cpp
